# deadline-manager

./: .dockerignore  .env.example  .gitignore  AGENT.md  AGENTS.md  Dockerfile  README.md  alembic.ini  bot.py  calendar_sync.py  checks.py  config.py  db.py  discord_utils.py  docker-compose.yml  models.py  pyproject.toml
.github/workflows/: ci.yml
api/: deps.py  main.py  schemas.py
api/routers/: deadlines.py  guild.py
cogs/: deadlines.py  reminders.py
migrations/: env.py
migrations/versions/: 001_drop_title_unique.py
raycast-extension/: package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
raycast-extension/src/: api.ts  create-deadline.tsx  edit-deadline.tsx  list-deadlines.tsx  oauth.ts
scripts/: install-githooks.py
tests/: conftest.py  test_api.py  test_bot.py  test_calendar_sync.py  test_checks.py  test_config.py  test_db.py  test_deadlines.py  test_discord_utils.py  test_migration.py  test_models.py  test_reminders.py
